qt6/gen_qcompleter.nim

import Qt6Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6Widgets")
{.compile("gen_qcompleter.cpp", cflags).}


type QCompleterCompletionMode* = cint
const
  QCompleterPopupCompletion* = 0
  QCompleterUnfilteredPopupCompletion* = 1
  QCompleterInlineCompletion* = 2



type QCompleterModelSorting* = cint
const
  QCompleterUnsortedModel* = 0
  QCompleterCaseSensitivelySortedModel* = 1
  QCompleterCaseInsensitivelySortedModel* = 2



import gen_qcompleter_types
export gen_qcompleter_types

import
  gen_qabstractitemmodel,
  gen_qabstractitemview,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qnamespace,
  gen_qobject,
  gen_qobjectdefs,
  gen_qrect,
  gen_qwidget
export
  gen_qabstractitemmodel,
  gen_qabstractitemview,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qnamespace,
  gen_qobject,
  gen_qobjectdefs,
  gen_qrect,
  gen_qwidget

type cQCompleter*{.exportc: "QCompleter", incompleteStruct.} = object

proc fcQCompleter_new(): ptr cQCompleter {.importc: "QCompleter_new".}
proc fcQCompleter_new2(model: pointer): ptr cQCompleter {.importc: "QCompleter_new2".}
proc fcQCompleter_new3(completions: struct_miqt_array): ptr cQCompleter {.importc: "QCompleter_new3".}
proc fcQCompleter_new4(parent: pointer): ptr cQCompleter {.importc: "QCompleter_new4".}
proc fcQCompleter_new5(model: pointer, parent: pointer): ptr cQCompleter {.importc: "QCompleter_new5".}
proc fcQCompleter_new6(completions: struct_miqt_array, parent: pointer): ptr cQCompleter {.importc: "QCompleter_new6".}
proc fcQCompleter_metaObject(self: pointer, ): pointer {.importc: "QCompleter_metaObject".}
proc fcQCompleter_metacast(self: pointer, param1: cstring): pointer {.importc: "QCompleter_metacast".}
proc fcQCompleter_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QCompleter_metacall".}
proc fcQCompleter_tr(s: cstring): struct_miqt_string {.importc: "QCompleter_tr".}
proc fcQCompleter_setWidget(self: pointer, widget: pointer): void {.importc: "QCompleter_setWidget".}
proc fcQCompleter_widget(self: pointer, ): pointer {.importc: "QCompleter_widget".}
proc fcQCompleter_setModel(self: pointer, c: pointer): void {.importc: "QCompleter_setModel".}
proc fcQCompleter_model(self: pointer, ): pointer {.importc: "QCompleter_model".}
proc fcQCompleter_setCompletionMode(self: pointer, mode: cint): void {.importc: "QCompleter_setCompletionMode".}
proc fcQCompleter_completionMode(self: pointer, ): cint {.importc: "QCompleter_completionMode".}
proc fcQCompleter_setFilterMode(self: pointer, filterMode: cint): void {.importc: "QCompleter_setFilterMode".}
proc fcQCompleter_filterMode(self: pointer, ): cint {.importc: "QCompleter_filterMode".}
proc fcQCompleter_popup(self: pointer, ): pointer {.importc: "QCompleter_popup".}
proc fcQCompleter_setPopup(self: pointer, popup: pointer): void {.importc: "QCompleter_setPopup".}
proc fcQCompleter_setCaseSensitivity(self: pointer, caseSensitivity: cint): void {.importc: "QCompleter_setCaseSensitivity".}
proc fcQCompleter_caseSensitivity(self: pointer, ): cint {.importc: "QCompleter_caseSensitivity".}
proc fcQCompleter_setModelSorting(self: pointer, sorting: cint): void {.importc: "QCompleter_setModelSorting".}
proc fcQCompleter_modelSorting(self: pointer, ): cint {.importc: "QCompleter_modelSorting".}
proc fcQCompleter_setCompletionColumn(self: pointer, column: cint): void {.importc: "QCompleter_setCompletionColumn".}
proc fcQCompleter_completionColumn(self: pointer, ): cint {.importc: "QCompleter_completionColumn".}
proc fcQCompleter_setCompletionRole(self: pointer, role: cint): void {.importc: "QCompleter_setCompletionRole".}
proc fcQCompleter_completionRole(self: pointer, ): cint {.importc: "QCompleter_completionRole".}
proc fcQCompleter_wrapAround(self: pointer, ): bool {.importc: "QCompleter_wrapAround".}
proc fcQCompleter_maxVisibleItems(self: pointer, ): cint {.importc: "QCompleter_maxVisibleItems".}
proc fcQCompleter_setMaxVisibleItems(self: pointer, maxItems: cint): void {.importc: "QCompleter_setMaxVisibleItems".}
proc fcQCompleter_completionCount(self: pointer, ): cint {.importc: "QCompleter_completionCount".}
proc fcQCompleter_setCurrentRow(self: pointer, row: cint): bool {.importc: "QCompleter_setCurrentRow".}
proc fcQCompleter_currentRow(self: pointer, ): cint {.importc: "QCompleter_currentRow".}
proc fcQCompleter_currentIndex(self: pointer, ): pointer {.importc: "QCompleter_currentIndex".}
proc fcQCompleter_currentCompletion(self: pointer, ): struct_miqt_string {.importc: "QCompleter_currentCompletion".}
proc fcQCompleter_completionModel(self: pointer, ): pointer {.importc: "QCompleter_completionModel".}
proc fcQCompleter_completionPrefix(self: pointer, ): struct_miqt_string {.importc: "QCompleter_completionPrefix".}
proc fcQCompleter_setCompletionPrefix(self: pointer, prefix: struct_miqt_string): void {.importc: "QCompleter_setCompletionPrefix".}
proc fcQCompleter_complete(self: pointer, ): void {.importc: "QCompleter_complete".}
proc fcQCompleter_setWrapAround(self: pointer, wrap: bool): void {.importc: "QCompleter_setWrapAround".}
proc fcQCompleter_pathFromIndex(self: pointer, index: pointer): struct_miqt_string {.importc: "QCompleter_pathFromIndex".}
proc fcQCompleter_splitPath(self: pointer, path: struct_miqt_string): struct_miqt_array {.importc: "QCompleter_splitPath".}
proc fcQCompleter_activated(self: pointer, text: struct_miqt_string): void {.importc: "QCompleter_activated".}
proc fQCompleter_connect_activated(self: pointer, slot: int) {.importc: "QCompleter_connect_activated".}
proc fcQCompleter_activatedWithIndex(self: pointer, index: pointer): void {.importc: "QCompleter_activatedWithIndex".}
proc fQCompleter_connect_activatedWithIndex(self: pointer, slot: int) {.importc: "QCompleter_connect_activatedWithIndex".}
proc fcQCompleter_highlighted(self: pointer, text: struct_miqt_string): void {.importc: "QCompleter_highlighted".}
proc fQCompleter_connect_highlighted(self: pointer, slot: int) {.importc: "QCompleter_connect_highlighted".}
proc fcQCompleter_highlightedWithIndex(self: pointer, index: pointer): void {.importc: "QCompleter_highlightedWithIndex".}
proc fQCompleter_connect_highlightedWithIndex(self: pointer, slot: int) {.importc: "QCompleter_connect_highlightedWithIndex".}
proc fcQCompleter_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCompleter_tr2".}
proc fcQCompleter_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCompleter_tr3".}
proc fcQCompleter_complete1(self: pointer, rect: pointer): void {.importc: "QCompleter_complete1".}
proc fQCompleter_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QCompleter_virtualbase_metacall".}
proc fcQCompleter_override_virtual_metacall(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_metacall".}
proc fQCompleter_virtualbase_pathFromIndex(self: pointer, index: pointer): struct_miqt_string{.importc: "QCompleter_virtualbase_pathFromIndex".}
proc fcQCompleter_override_virtual_pathFromIndex(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_pathFromIndex".}
proc fQCompleter_virtualbase_splitPath(self: pointer, path: struct_miqt_string): struct_miqt_array{.importc: "QCompleter_virtualbase_splitPath".}
proc fcQCompleter_override_virtual_splitPath(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_splitPath".}
proc fQCompleter_virtualbase_eventFilter(self: pointer, o: pointer, e: pointer): bool{.importc: "QCompleter_virtualbase_eventFilter".}
proc fcQCompleter_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_eventFilter".}
proc fQCompleter_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QCompleter_virtualbase_event".}
proc fcQCompleter_override_virtual_event(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_event".}
proc fQCompleter_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QCompleter_virtualbase_timerEvent".}
proc fcQCompleter_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_timerEvent".}
proc fQCompleter_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QCompleter_virtualbase_childEvent".}
proc fcQCompleter_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_childEvent".}
proc fQCompleter_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QCompleter_virtualbase_customEvent".}
proc fcQCompleter_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_customEvent".}
proc fQCompleter_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QCompleter_virtualbase_connectNotify".}
proc fcQCompleter_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_connectNotify".}
proc fQCompleter_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QCompleter_virtualbase_disconnectNotify".}
proc fcQCompleter_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QCompleter_override_virtual_disconnectNotify".}
proc fcQCompleter_staticMetaObject(): pointer {.importc: "QCompleter_staticMetaObject".}
proc fcQCompleter_delete(self: pointer) {.importc: "QCompleter_delete".}


func init*(T: type QCompleter, h: ptr cQCompleter): QCompleter =
  T(h: h)
proc create*(T: type QCompleter, ): QCompleter =

  QCompleter.init(fcQCompleter_new())
proc create*(T: type QCompleter, model: gen_qabstractitemmodel.QAbstractItemModel): QCompleter =

  QCompleter.init(fcQCompleter_new2(model.h))
proc create*(T: type QCompleter, completions: seq[string]): QCompleter =

  var completions_CArray = newSeq[struct_miqt_string](len(completions))
  for i in 0..<len(completions):
    completions_CArray[i] = struct_miqt_string(data: completions[i], len: csize_t(len(completions[i])))

  QCompleter.init(fcQCompleter_new3(struct_miqt_array(len: csize_t(len(completions)), data: if len(completions) == 0: nil else: addr(completions_CArray[0]))))
proc create2*(T: type QCompleter, parent: gen_qobject.QObject): QCompleter =

  QCompleter.init(fcQCompleter_new4(parent.h))
proc create*(T: type QCompleter, model: gen_qabstractitemmodel.QAbstractItemModel, parent: gen_qobject.QObject): QCompleter =

  QCompleter.init(fcQCompleter_new5(model.h, parent.h))
proc create*(T: type QCompleter, completions: seq[string], parent: gen_qobject.QObject): QCompleter =

  var completions_CArray = newSeq[struct_miqt_string](len(completions))
  for i in 0..<len(completions):
    completions_CArray[i] = struct_miqt_string(data: completions[i], len: csize_t(len(completions[i])))

  QCompleter.init(fcQCompleter_new6(struct_miqt_array(len: csize_t(len(completions)), data: if len(completions) == 0: nil else: addr(completions_CArray[0])), parent.h))
proc metaObject*(self: QCompleter, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQCompleter_metaObject(self.h))

proc metacast*(self: QCompleter, param1: cstring): pointer =

  fcQCompleter_metacast(self.h, param1)

proc metacall*(self: QCompleter, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQCompleter_metacall(self.h, cint(param1), param2, param3)
